@@ -1,6 +1,8 @@
-AUX cachefilesd.conf 228 RMD160 c9975dc842e75db716eae2f9b3bf22c6df4e8a5d SHA1 e52939661d9192008d866e4b5e9da1f8930eab53 SHA256 3553318406a02c8279fd1476d242d08fc347cadf0af7f9c100e945076504b3af
-AUX cachefilesd.init 503 RMD160 b218773e15f7a32f6b2611a18a9e272b8eea932d SHA1 db85cf03627cdb880b3a23a8243774defa8b34c5 SHA256 610ce0268be4e70554d6f3e380348e9cc08a8cb99aa37cec0dd76f5b6c7da6d8
+AUX cachefilesd.conf 284 RMD160 34c1bc4cd9071a6c76f4fcd48f950b5cd6d36a77 SHA1 b85c6782c1fa7d268e6f357ac1751d2114b9ee18 SHA256 355f53fb6babbd3ba1e616c335ffaaab854a114ab63086c7bf6ef612f8baa447
+AUX cachefilesd.init 667 RMD160 f775ae36113b9f1075ac68e2e49deb6e9248451d SHA1 92696a964ff4655463956e7f7072c5a5f266a553 SHA256 dfe3352e0fff9765e6857c386732e28cecc24570a586bfeac8d261cb0b115ac0
+DIST cachefilesd-0.10.tar.bz2 24196 RMD160 4527c798deaa9a377bbff85b040b543629a280a7 SHA1 b23b2b8e8ed3d1d7a1e400bcfc41924b9c5caed7 SHA256 ec1c2311aeeeb9246549d7efdc6ad464d3eda768d1883a22ecf40c2ea2354fd7
 DIST cachefilesd-0.9.tar.bz2 20155 RMD160 e23fcd4c337819351f99bdc9ba524e34904503da SHA1 56d89b6415e0290888aa095866cf7c3f01a4665d SHA256 9996c3e624e0d022fc42e5013396d6fa300b47e60f94c0cc08038f0df2f33447
+EBUILD cachefilesd-0.10.ebuild 1201 RMD160 11883e49d346558d31c10cdb8433f645a0223545 SHA1 5b7265c0012de0035cb8279411e6e30a7792da30 SHA256 b49e97703b9a17fb91821eb9f79f9cf1a099ac4220215a53bdd6c8f30e904b35
 EBUILD cachefilesd-0.9-r1.ebuild 1128 RMD160 7fade54818da7738923d8091e5294c33a8e6e54b SHA1 b4ad8ac304ebefaf018e791897c45cfcf9fbc0cf SHA256 a89d4578c3bf57f2875e98432f8f853ed0c86433109e265c8cf5282d898b099a
-MISC ChangeLog 421 RMD160 2fc308fe9c0441527aa92284a848b8c8879a6982 SHA1 682c438544ef51b30cd11ffcc4a8902c6d9fbf0c SHA256 2404058d3bfb4ca863cb986ddb9a2a2d621d861620c585ba656943e12a51cc95
+MISC ChangeLog 600 RMD160 50fd931166ceccf7f854b1847ecbc452b60b58fa SHA1 f0bf60035fdfad2730722259d3db10b9044c3884 SHA256 e8ae55d32b7a682288b7accece57f9268a614dbdd83cc5eeed9ec34d92a683d5
 MISC metadata.xml 383 RMD160 5413cc4dddf46b69003cbeea899245773180df63 SHA1 76be9a971d71d7895c3aead4eaff1bcc3b96ec5e SHA256 62f6e6c67dd187f09ac23a549d3914db97a8c2bd93f149dfcf31bd14cbcf305d
