@@ -3,6 +3,6 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
+# -d <level> - debug
+# -f <configfile>  Read the specified configuration file instead of /etc/cachefiles.conf
 OPTIONS=""
-PIDFILE="/var/run/cachefilesd.pid"
-PROG="cachefilesd"
